[gd_scene load_steps=10 format=3 uid="uid://dg4ppy8ynqeux"]

[ext_resource type="PackedScene" uid="uid://bve7wimpparyi" path="res://util/sequencer/sequencer.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://d0640825wwiqj" path="res://editor/scenes/song_editor/song_editor.tscn" id="3"]
[ext_resource type="Script" uid="uid://6pxioyca0vtd" path="res://main.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://b4hc2xsvkl52r" path="res://editor/scenes/control_panel/control_panel.tscn" id="4_5vw27"]
[ext_resource type="PackedScene" uid="uid://cluyvkosdd3n8" path="res://editor/scenes/instruments/instruments_panel.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://co3426kj3k403" path="res://editor/scenes/top_menu/top_menu.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://cd0y087oaaxj8" path="res://editor/scenes/status_bar.tscn" id="7_wkp8b"]
[ext_resource type="Script" uid="uid://dg653mebptva4" path="res://editor/scenes/song_script_editor/song_validator.gd" id="8_5vw27"]
[ext_resource type="PackedScene" uid="uid://buoe276tnprxb" path="res://editor/scenes/dialog_manager.tscn" id="8_trn2v"]

[node name="Main" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TopMenu" parent="VBoxContainer" instance=ExtResource("6")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Application" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 250
dragger_visibility = 1

[node name="InstrumentsPanel" parent="VBoxContainer/Application" instance=ExtResource("5")]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Main" type="VBoxContainer" parent="VBoxContainer/Application"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
theme_override_constants/separation = 10

[node name="ControlPanel" parent="VBoxContainer/Application/Main" instance=ExtResource("4_5vw27")]
unique_name_in_owner = true
layout_mode = 2

[node name="SongEditor" parent="VBoxContainer/Application/Main" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="StatusBar" parent="VBoxContainer" instance=ExtResource("7_wkp8b")]
unique_name_in_owner = true
layout_mode = 2

[node name="DialogManager" parent="." instance=ExtResource("8_trn2v")]
unique_name_in_owner = true
layout_mode = 2

[node name="SongValidator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("8_5vw27")
metadata/_custom_type_script = "uid://dg653mebptva4"

[node name="Sequencer" parent="." instance=ExtResource("1")]
unique_name_in_owner = true
